--- a/src/app/pages/feature/onboardfeature/onboardfeature.page.html
+++ b/src/app/pages/feature/onboardfeature/onboardfeature.page.html
@@ -198,8 +198,8 @@
                 <div class="moment-label"><img class="side-image" src="assets/img/Poll_Gray.png" /></div>
                 <ion-label class="label-title">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][0]}}</ion-label>
               </ion-item>
-              <ion-item>
-                <ion-label class="ion-text-wrap">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][1]}}</ion-label>
+              <ion-item lines="none">
+                <div class="ion-text-wrap ion-padding-vertical">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][1]}}</div>
               </ion-item>
               <div class="pollContainer" *ngFor="let display of interactableDisplay[moment.resource.matrix_number[2][i + moment.resource.matrix_number[0].indexOf(20010) + 1]]; index as pollOptionIndex">
                 <div class="optionsContainer">
@@ -225,8 +225,8 @@
                  <div class="moment-label"><ion-icon class="side-icon" color="grey" name="help"></ion-icon></div>
                  <ion-label class="label-title">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][0]}}</ion-label>
                </ion-item>-->
-              <ion-item>
-                <div style="font-size: 14px" class="ion-text-wrap">{{moment.matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][0]}}</div>
+              <ion-item lines="none">
+                <div class="ion-text-wrap ion-padding-vertical ">{{moment.matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][0]}}</div>
               </ion-item>
               <ion-item lines="none">
                 <quill-editor (onEditorCreated)="createQuillEditor($event, interactableDisplay[moment.resource.matrix_number[2][i + moment.resource.matrix_number[0].indexOf(20010) + 1]])" [placeholder]="(moment.matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][4] || resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][10])"
@@ -309,7 +309,7 @@
               </ion-content>
             </div>
             <div class="component" *ngIf="item === 40000"> <!--Multiple Choice-->
-              <ion-item>
+              <ion-item lines="none">
                 <div class="ion-padding-vertical ion-text-wrap">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][1]}}</div>
               </ion-item>
               <ion-item class="pollContainer" *ngFor="let display of interactableDisplay[moment.resource.matrix_number[2][i + moment.resource.matrix_number[0].indexOf(20010) + 1]]; index as interactableOptionIndex" (click)="respondToInteractable($event, i + moment.resource.matrix_number[0].indexOf(20010) + 1, interactableOptionIndex)">
@@ -319,7 +319,7 @@
               </ion-item>
             </div>
             <div class="component" *ngIf="item === 40020 && moment.matrix_number[i + moment.resource.matrix_number[0].indexOf(20010) + 1].length > 2 && moment.matrix_number[i + moment.resource.matrix_number[0].indexOf(20010) + 1][2] === 1"> <!--Multiple Choice-->
-              <ion-item>
+              <ion-item lines="none">
                 <div class="ion-text-wrap ion-padding-vertical">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][1]}}</div>
               </ion-item>
               <ion-item class="pollContainer" *ngFor="let display of interactableDisplay[moment.resource.matrix_number[2][i + moment.resource.matrix_number[0].indexOf(20010) + 1]] | keyvalue; index as interactableOptionIndex" (click)="respondToInteractable($event, i + moment.resource.matrix_number[0].indexOf(20010) + 1, display.value.createdAt)">
@@ -329,7 +329,7 @@
               </ion-item>
             </div>
             <div class="component" *ngIf="item === 40020  && moment.matrix_number[i + moment.resource.matrix_number[0].indexOf(20010) + 1].length > 2 && !moment.matrix_number[i + moment.resource.matrix_number[0].indexOf(20010) + 1][2]"> <!--Tile Choice with Photos-->
-              <ion-item>
+              <ion-item lines="none">
                 <div class="ion-text-wrap ion-padding-vertical">{{moment.resource['en-US'].matrix_string[i + moment.resource.matrix_number[0].indexOf(20010) + 1][1]}}</div>
               </ion-item>
               <ion-grid class="tile-grid">
