chat anchor link color changed

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,12 +22,12 @@
   --ion-color-secondary-tint: #24d6ea;
 
   /** tertiary **/
-  --ion-color-tertiary: #4A90E2;
-  --ion-color-tertiary-rgb: 74,144,226;
+  --ion-color-tertiary: #053055;
+  --ion-color-tertiary-rgb: 5,48,85;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255,255,255;
-  --ion-color-tertiary-shade: #0bb8cc;
-  --ion-color-tertiary-tint: #24d6ea;
+  --ion-color-tertiary-shade: #042a4b;
+  --ion-color-tertiary-tint: #1e4566;
 
   /** success **/
   --ion-color-success: #10dc60;
@@ -151,12 +151,12 @@
     --ion-color-secondary-shade: #1e2023;
     --ion-color-secondary-tint: #383a3e;
 
-    --ion-color-tertiary: #4A90E2;
-    --ion-color-tertiary-rgb: 74,144,226;
+    --ion-color-tertiary: #1e5485;
+    --ion-color-tertiary-rgb: 30,84,133;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #0bb8cc;
-    --ion-color-tertiary-tint: #24d6ea;
+    --ion-color-tertiary-shade: #1a4a75;
+    --ion-color-tertiary-tint: #356591;
 
     --ion-color-success: #2fdf75;
     --ion-color-success-rgb: 47,223,117;
