--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -441,12 +441,16 @@ app-dashboard {
   }
 
   .person-card {
-    max-width: 300px;
-    width: 80%;
+    max-width: 350px;
+    max-height: 150px;
+    width: 100%;
     height: 100%;
-    //max-height: 200px;
     object-fit: contain;
-    margin: 0 12px;
+    margin: 0;
+    padding: 13px;
+    display: flex;
+    flex-direction: row;
+
 
     // Added the slant pattern!
     .top-pattern {
@@ -478,6 +482,10 @@ app-dashboard {
       z-index: -2;
     }
   }
+  .person-photo{
+      width: 125px !important;
+      height: 125px !important;
+  }
 
   .person-content {
     height: 75px;
@@ -496,8 +504,18 @@ app-dashboard {
     line-height: 100%;
   }
 
+  .person-name-right {
+    margin: 25px 250px 75px 100px;
+    width: 100%;
+    padding-left: 13px;
+    display: flex;
+    flex-direction: column;
+  }
+
   .person-name {
-    font-size: 14px;
+    color: black;
+    top: -30px;
+    font-size: 20px; 
   }
 
   .person-title {
@@ -508,6 +526,13 @@ app-dashboard {
 
   .content-border {
     border-left: 0.5px solid #979797;
+  }
+  .button-edit-profile{
+    font-size: 12px;
+    font-family: 'Arial';
+    text-transform: none;
+    width: 165px;
+    height: 25px;
   }
 
   .person-content-right {
@@ -521,6 +546,7 @@ app-dashboard {
     font-size: 12px;
     color: var(--ion-color-darkgrey);
   }
+
 
   .section {
     --min-height: 26px;
