--- a/src/app/pages/board/showboardpost/showboardpost.page.html
+++ b/src/app/pages/board/showboardpost/showboardpost.page.html
@@ -14,7 +14,7 @@
 
 <ion-content>
   <ion-grid style="height: 100%" *ngIf="!loadCompleted">
-    <ion-row class="ion-justify-content-end ion-align-items-center" style="height: 100%">
+    <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
