--- a/src/app/pages/user/register/register.page.scss
+++ b/src/app/pages/user/register/register.page.scss
@@ -124,12 +124,12 @@ app-register {
     margin: 0 auto;
   }
 
-  .login-logo-2 {
+  .login-logo {
     max-width: 25%;
     margin: 0 auto;
   }
 
-  .welcome-name-2 {
+  .welcome-name {
     font-size: 20px;
     //color: var(--ion-color-secondary);
     margin: 2% auto 0 auto;
