move video conferencing to a dedicated page on desktop
1.8.5 (1)

--- a/src/app/pages/connect/videoconference/videoconference.page.html
+++ b/src/app/pages/connect/videoconference/videoconference.page.html
@@ -91,7 +91,7 @@
           <ion-img class="login-logo" src="assets/img/icon.png"></ion-img>
         </ion-row>
         <ion-row class="ion-justify-content-center" style="margin: 30px 10%">
-          <ion-card-title class="ion-text-center">You need the Restvo mobile app to join this meeting on your phone.</ion-card-title>
+          <ion-card-subtitle class="ion-text-center">You need the Restvo mobile app to join this meeting on your phone.</ion-card-subtitle>
         </ion-row>
         <ion-row class="ion-justify-content-center">
           <ion-button *ngIf="platform.is('android')" href="https://play.google.com/store/apps/details?id=com.restvo.app">Download the app</ion-button>
