--- a/src/app/pages/connect/videoconference/videoconference.page.html
+++ b/src/app/pages/connect/videoconference/videoconference.page.html
@@ -1,20 +1,44 @@
 <ion-content *ngIf="!platform.is('mobileweb')">
-  <div id="videoConference" *ngIf="!videoEnded"></div>
-  <ion-grid style="height: 100%" *ngIf="videoEnded">
-    <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
-      <ion-list>
-        <ion-row class="ion-justify-content-center ion-margin-bottom">
-          <ion-label>Your Have Left the Video Session</ion-label>
-        </ion-row>
-        <ion-row class="ion-justify-content-center">
-          <ion-button (click)="reload()" fill="clear">Rejoin Video Session</ion-button>
-        </ion-row>
-        <ion-row class="ion-justify-content-center">
-          <ion-button (click)="goToHome()" fill="clear">Go to Home</ion-button>
-        </ion-row>
-      </ion-list>
-    </ion-row>
-  </ion-grid>
+  <div *ngIf="platform.is('cordova')" style="height: 100%">
+    <ion-grid style="height: 100%" *ngIf="!userData.readyToControlVideoChat">
+      <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
+        <ion-spinner name="dots"></ion-spinner>
+      </ion-row>
+    </ion-grid>
+    <ion-grid style="height: 100%" *ngIf="userData.readyToControlVideoChat && !userData.videoChatRoomId">
+      <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
+        <div>
+          <ion-row class="ion-justify-content-center" style="margin-bottom: 50px">
+            <ion-img class="login-logo" src="assets/img/icon.png"></ion-img>
+          </ion-row>
+          <ion-row class="ion-justify-content-center">
+            <ion-button (click)="reload()" fill="clear">Join Video Session</ion-button>
+          </ion-row>
+          <ion-row class="ion-justify-content-center" *ngIf="!authService.token">
+            <ion-button (click)="goToHome()" fill="clear">Go to Home</ion-button>
+          </ion-row>
+        </div>
+      </ion-row>
+    </ion-grid>
+  </div>
+  <div *ngIf="!platform.is('cordova')" style="height: 100%">
+    <div id="videoConference" *ngIf="!videoEnded"></div>
+    <ion-grid style="height: 100%" *ngIf="videoEnded">
+      <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
+        <ion-list>
+          <ion-row class="ion-justify-content-center ion-margin-bottom">
+            <ion-label>Your Have Left the Video Session</ion-label>
+          </ion-row>
+          <ion-row class="ion-justify-content-center">
+            <ion-button (click)="reload()" fill="clear">Rejoin Video Session</ion-button>
+          </ion-row>
+          <ion-row class="ion-justify-content-center">
+            <ion-button (click)="goToHome()" fill="clear">Go to Home</ion-button>
+          </ion-row>
+        </ion-list>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
 <ion-content *ngIf="platform.is('mobileweb')">
   <ion-grid style="height: 100%">
