deeplinking to video conferencing page
1.8.5 (1)

--- a/src/app/pages/connect/videoconference/videoconference.page.html
+++ b/src/app/pages/connect/videoconference/videoconference.page.html
@@ -5,7 +5,7 @@
         <ion-spinner name="dots"></ion-spinner>
       </ion-row>
     </ion-grid>
-    <ion-grid style="height: 100%" *ngIf="userData.readyToControlVideoChat && !userData.videoChatRoomId">
+    <ion-grid style="height: 100%" *ngIf="userData.readyToControlVideoChat">
       <ion-row class="ion-justify-content-center ion-align-items-center" style="height: 100%">
         <div>
           <ion-row class="ion-justify-content-center" style="margin-bottom: 50px">
