--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -178,10 +178,10 @@ app-groupchat {
       color: var(--ion-color-dark);
     }
     a:link {
-      color:var(--ion-color-tertiary);
+      color:var(--ion-color-dark);
     }
     a:visited {
-      color:var(--ion-color-tertiary);
+      color:var(--ion-color-dark);
     }
   }
 
@@ -198,10 +198,10 @@ app-groupchat {
       color:var(--ion-color-light);
     }
     a:link {
-      color:var(--ion-color-tertiary);
+      color:var(--ion-color-light);
     }
     a:visited {
-      color:var(--ion-color-tertiary);
+      color:var(--ion-color-light);
     }
   }
 
