--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -286,9 +286,9 @@
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-toolbar-background: #2d2525;
+    --ion-toolbar-background: #202020;
 
-    --ion-item-background: #231919;
+    --ion-item-background: #121212;
     --ion-item-background-activated: #313131;
   }
 
