--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -43,6 +43,10 @@ app-showfeature {
     z-index: 15;
   }
 
+  .ql-container.ql-snow {
+    border: none !important;
+  }
+
   .component {
     width: 100%;
   }
