--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,7 +74,7 @@
   /** custom color. it requires adding a new class in global.scss that uses these css variables  **/
 
   /** grey **/
-  --ion-color-grey: #eaeaea;
+  --ion-color-grey: #909090;
   --ion-color-grey-rgb: 234,234,234;
   --ion-color-grey-contrast: #000000;
   --ion-color-grey-contrast-rgb: 0,0,0;
