--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -331,7 +331,7 @@ app-groupchat {
   }
 
   .pollQuestion {
-    color: black;
+    color: var(--ion-color-dark);
     font-size: medium;
     font-style: italic;
   }
@@ -348,7 +348,7 @@ app-groupchat {
   .optionsContainer {
     float: left;
     width: 58%;
-    .option{
+    .option {
       padding-top: 5px;
       float: left;
       font-size: medium;
@@ -362,7 +362,7 @@ app-groupchat {
     width: 20%;
     .votecount{
       padding-top: 14px;
-      color: black;
+      color: var(--ion-color-dark);
       font-size: x-small;
     }
   }
@@ -376,7 +376,7 @@ app-groupchat {
       font-size: x-small;
       width: 90%;
       height: 30px;
-      color: black;
+      color: var(--ion-color-dark);
     }
     .uservoted {
       padding-top: 20px;
@@ -520,6 +520,8 @@ app-groupchat {
     ion-textarea {
       margin: 8px;
       width: auto;
+      --color: #222428;
+      --background: white;
       border-style: solid;
       border-radius: 8px;
       border-color: var(--ion-color-lightgrey);
@@ -527,11 +529,10 @@ app-groupchat {
       --padding-start: 4px;
     }
 
-    .textarea-wrapper {
+    /*.textarea-wrapper {
       background-color:var(--ion-color-grey);
       border-radius: 10px;
-     
-    }
+    }*/
     .sendImage {
       margin: 16px 0 16px 3%;
       height: 30px;
@@ -719,7 +720,7 @@ app-groupchat {
   }
 
   .light {
-    color: white;
+    color: var(--ion-color-secondary);
   }
 
   .upload {
@@ -792,7 +793,7 @@ app-groupchat {
   }
 
   .section-title {
-    color: white;
+    color: var(--ion-color-secondary);
     --background: var(--ion-color-grey);
     text-align: left;
     font-size: large;
